# PteraSoftware

./: .codespell-ignore.txt  .gitignore  .pre-commit-config.yaml  BUILD.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  make_installer.iss  mypy.ini  pterasoftware.spec  pyproject.toml  requirements.txt  requirements_ci.txt  requirements_ci_latest.txt  requirements_ci_min.txt  requirements_dev.txt  requirements_min.txt  setup.cfg
.claude/: DOCSTRINGS.md  settings.json  settings.local.json
.github/: CODEOWNERS  pull_request_template.md
benchmarks/: unsteady_benchmark.py  unsteady_benchmark_converge.py  unsteady_benchmark_timed.py
debugging scripts/: 1_simple_glider_convergence.py  2_simple_glider_trim.py  3_simple_glider_prescribed.py  4_simple_glider_free_flight.py  DEBUGGING_LOG.md  flat_plate_free_flight.py  flat_plate_prescribed.py  link_to_onshape_part_studio.txt  simple_glider.xfl
debugging_scripts/: 3_simple_glider_prescribed.py  4_simple_glider_free_flight.py  flat_plate.py  flat_plate_free_flight.py
docs/: ANGLE_VECTORS_AND_TRANSFORMATIONS.md  AXES_COORDINATES_AND_FRAMES.md  AXES_POINTS_AND_FRAMES.md  CODE_STYLE.md  FREE_FLIGHT_DEVELOPMENT.md  MUJOCO_CONVENTIONS.md  WRITING_STYLE.md
examples/: analyze_steady_trim.py  analyze_steady_trim_example.py  analyze_unsteady_trim_example.py  steady_convergence.py  steady_horseshoe_vortex_lattice_method_solver.py  steady_ring_vortex_lattice_method_solver.py  unsteady_ring_vortex_lattice_method_solver_static.py  unsteady_ring_vortex_lattice_method_solver_variable.py  unsteady_static_convergence.py  (+3 more)
(+117 files in other folders)
