[build-system]
requires = [
    "setuptools>=80.9.0",
    "wheel>=0.45.1"
]
build-backend = "setuptools.build_meta"

[tool.black]
target-version = ['py313']
include = '\.pyi?$'

[tool.pydocstringformatter]
write = false
style = ["numpydoc"]
max-line-length = 88
linewrap-full-docstring = true
numpydoc-section-order = true
numpydoc-section-spacing = true
numpydoc-name-type-spacing = true
numpydoc-section-hyphen-length = true
exclude = ".claude/|.github/|.venv/|.venv_docs/|benchmarks/|docs/|experimental/|reports/"

[tool.ruff]
target-version = "py313"
extend-exclude = [
  ".claude/**",
  ".github/**",
  ".venv/**",
  ".venv_docs/**",
  "benchmarks/**",
  "docs/**",
  "experimental/**",
  "reports/**",
]

[tool.ruff.lint]
select = ["E", "F", "I", "D"]
ignore = ["D401", "D404", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"
